GUI to set tap/long to system default and tap to long press

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name='array_delay_short'>Short</string>
     <string name='array_delay_normal'>Normal</string>
     <string name='array_delay_long'>Long</string>
+    <string name='array_delay_longpress'>Long Press</string>
+    <string name='array_delay_default'>Default</string>
     
     <!-- ================================================
          Strings for AsyncTask Loader
