--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,10 +78,13 @@
          Strings for ActivityScreenRemap
     ================================================ -->
     <string name='category_settings'>Settings</string>
-    
+
+    <string name='preference_title_skip_unconfigured_primary_key'>Skip_unconfigured_primary_key</string>
+    <string name='preference_summary_skip_unconfigured_primary_key'>Note: skip_unconfigured_primary_key</string>
+
     <string name='preference_title_allow_externals'>Allow External Devices</string>
     <string name='preference_summary_allow_externals'>Note: Will not work with all types</string>
-    
+
     <string name='preference_title_delay_key_tap'>Double click delay</string>
     <string name='preference_title_delay_key_press'>Long press delay</string>
     
