--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -79,8 +79,8 @@
     ================================================ -->
     <string name='category_settings'>Settings</string>
 
-    <string name='preference_title_skip_unconfigured_primary_key'>Skip_unconfigured_primary_key</string>
-    <string name='preference_summary_skip_unconfigured_primary_key'>Note: skip_unconfigured_primary_key</string>
+    <string name='preference_title_check_unconfigured_primary_key'>Check Unconfigured Primary Key</string>
+    <string name='preference_summary_check_unconfigured_primary_key'>Enable to check unmapped single keys for multi key (adds processing delay to all keys)</string>
 
     <string name='preference_title_allow_externals'>Allow External Devices</string>
     <string name='preference_summary_allow_externals'>Note: Will not work with all types</string>
