--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,7 +41,10 @@
 	
     <string name='category_title_pro'>Get Pro Extension permanently</string>
     <string name='category_summary_pro'>Pro Extension enabled for evaluation purposes</string>
-<!--    <string name='category_summary_pro'>Add more features with the Pro Extension</string> -->
+<!--
+    <string name='category_title_pro'>Get Pro Extension</string>
+    <string name='category_summary_pro'>Add more features with the Pro Extension</string>
+-->
 
 	<string name='category_title_usbplug'>USB Plug/UnPlug</string>
 	<string name='category_summary_usbplug'>Change the behavior when Plugging/UnPlugging the USB cable</string>
@@ -79,10 +82,10 @@
          Strings for ActivityScreenRemap
     ================================================ -->
     <string name='category_settings'>Settings</string>
-
+    
     <string name='preference_title_allow_externals'>Allow External Devices</string>
     <string name='preference_summary_allow_externals'>Note: Will not work with all types</string>
-
+    
     <string name='preference_title_delay_key_tap'>Double click delay</string>
     <string name='preference_title_delay_key_press'>Long press delay</string>
     
