--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -134,10 +134,13 @@
     ================================================ -->
     <string name='category_applications'>Applications</string>
     <string name='category_custom_actions'>Custom Actions</string>
-    
+
     <string name='preference_title_select_tasker'>Tasker</string>
     <string name='preference_summary_select_tasker'>Select a task from Tasker</string>
-    
+
+    <string name='preference_title_select_appshortcut'>App Shortcut</string>
+    <string name='preference_summary_select_appshortcut'>Select an app shortcut</string>
+
     <string name='text_key'>Key: %1$s</string>
     
     <!-- ================================================
