--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,6 +105,9 @@
     <string name='category_keys_secondary'>Secondary Keys</string>
     <string name='preference_add_key'>Add new Key</string>
 
+    <string name='preference_title_default_condition'>Default Condition</string>
+    <string name='preference_summary_default_condition'>Use screen on condition for unconfigured actions</string>
+
     <string name='category_button_single_states'>Single Actions</string>
     <string name='category_button_double_states'>Double Actions</string>
     <string name='category_button_triple_states'>Triple Actions</string>
